# stereo-visual-odometry-kitti

./: .gitignore  CMakeLists.txt  README.md  config.yaml  main.py
include/: feature_detector.h  pose_estimator.h
results/: 00.txt  trajectory_00.txt
src/: feature_detector.cpp  main.cpp  pose_estimator.cpp  tdv_lab.cpp
src2/: calibration.py  features.py  main.py  motion_estimation.py  stereo_depth.py  visualization.py
